--- a/python-pandas-1/python-pandas-1.ipynb
+++ b/python-pandas-1/python-pandas-1.ipynb
@@ -373,7 +373,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"/images/split-method.png\" style=\"margin-left:auto;margin-right:auto;width:40%\">"
+    "<img src=\"images/split-method.png\" style=\"margin-left:auto;margin-right:auto;width:40%\">"
    ]
   },
   {
@@ -606,7 +606,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"/images/string-slicing.png\" style=\"margin-left:auto;margin-right:auto;width:70%\">"
+    "<img src=\"images/string-slicing.png\" style=\"margin-left:auto;margin-right:auto;width:70%\">"
    ]
   },
   {
